--- a/ChoreImpetusAndroid/Resources/layout/Main.axml
+++ b/ChoreImpetusAndroid/Resources/layout/Main.axml
@@ -1,29 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_weight="100">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="15">
-        <ListView
-            android:minWidth="25px"
-            android:minHeight="25px"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/ChoreList" />
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="85">
-        <Button
-            android:id="@+id/myButton"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/create"
-            android:layout_alignParentBottom="true" />
-    </RelativeLayout>
-</LinearLayout>
+    android:layout_height="fill_parent">
+    <ListView
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ChoreList"
+        android:layout_marginBottom="50dp" />
+    <Button
+        android:id="@+id/myButton"
+        android:minHeight="50dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/create"
+        android:layout_alignParentBottom="true" />
+</RelativeLayout>
